@@ -144,16 +144,16 @@ public class TaskRegistrar {
 		TaskManagerFactory.register("dd", new com.bretth.osmosis.core.customdb.v0_5.DumpDatasetFactory());
 		TaskManagerFactory.register("read-customdb", new com.bretth.osmosis.core.customdb.v0_5.ReadDatasetFactory());
 		TaskManagerFactory.register("rc", new com.bretth.osmosis.core.customdb.v0_5.ReadDatasetFactory());
-		TaskManagerFactory.register("write-pgsql-simple", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
-		TaskManagerFactory.register("wps", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
-		TaskManagerFactory.register("truncate-pgsql-simple", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
-		TaskManagerFactory.register("tps", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
-		TaskManagerFactory.register("write-pgsql-simple-dump", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
-		TaskManagerFactory.register("wpsd", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
-		TaskManagerFactory.register("read-pgsql-simple", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
-		TaskManagerFactory.register("rps", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
-		TaskManagerFactory.register("write-pgsql-simple-change", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
-		TaskManagerFactory.register("wpsc", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
+		TaskManagerFactory.register("write-pgsql", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
+		TaskManagerFactory.register("wp", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
+		TaskManagerFactory.register("truncate-pgsql", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
+		TaskManagerFactory.register("tp", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
+		TaskManagerFactory.register("write-pgsql-dump", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
+		TaskManagerFactory.register("wpd", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
+		TaskManagerFactory.register("read-pgsql", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
+		TaskManagerFactory.register("rp", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
+		TaskManagerFactory.register("write-pgsql-change", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
+		TaskManagerFactory.register("wpc", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
 		TaskManagerFactory.register("used-node", new com.bretth.osmosis.core.filter.v0_5.UsedNodeFilterFactory());
 		TaskManagerFactory.register("un", new com.bretth.osmosis.core.filter.v0_5.UsedNodeFilterFactory());
 		TaskManagerFactory.register("way-key-value", new com.bretth.osmosis.core.filter.v0_5.WayKeyValueFilterFactory());
@@ -196,11 +196,11 @@ public class TaskRegistrar {
 		TaskManagerFactory.register("dataset-bounding-box-0.5", new com.bretth.osmosis.core.filter.v0_5.DatasetBoundingBoxFilterFactory());
 		TaskManagerFactory.register("dataset-dump-0.5", new com.bretth.osmosis.core.customdb.v0_5.DumpDatasetFactory());
 		TaskManagerFactory.register("read-customdb-0.5", new com.bretth.osmosis.core.customdb.v0_5.ReadDatasetFactory());
-		TaskManagerFactory.register("write-pgsql-simple-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
-		TaskManagerFactory.register("truncate-pgsql-simple-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
-		TaskManagerFactory.register("write-pgsql-simple-dump-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
-		TaskManagerFactory.register("read-pgsql-simple-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
-		TaskManagerFactory.register("write-pgsql-simple-change-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
+		TaskManagerFactory.register("write-pgsql-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetWriterFactory());
+		TaskManagerFactory.register("truncate-pgsql-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetTruncatorFactory());
+		TaskManagerFactory.register("write-pgsql-dump-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetDumpWriterFactory());
+		TaskManagerFactory.register("read-pgsql-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlDatasetReaderFactory());
+		TaskManagerFactory.register("write-pgsql-change-0.5", new com.bretth.osmosis.core.pgsql.v0_5.PostgreSqlChangeWriterFactory());
 		TaskManagerFactory.register("used-node-0.5", new com.bretth.osmosis.core.filter.v0_5.UsedNodeFilterFactory());
 		TaskManagerFactory.register("way-key-value-0.5", new com.bretth.osmosis.core.filter.v0_5.WayKeyValueFilterFactory());
 		TaskManagerFactory.register("read-change-interval-0.5", new com.bretth.osmosis.core.merge.v0_5.ChangeDownloaderFactory());
@@ -239,11 +239,11 @@ public class TaskRegistrar {
 		TaskManagerFactory.register("dataset-bounding-box-0.6", new DatasetBoundingBoxFilterFactory());
 		TaskManagerFactory.register("dataset-dump-0.6", new DumpDatasetFactory());
 		TaskManagerFactory.register("read-customdb-0.6", new ReadDatasetFactory());
-		TaskManagerFactory.register("write-pgsql-simple-0.6", new PostgreSqlDatasetWriterFactory());
-		TaskManagerFactory.register("truncate-pgsql-simple-0.6", new PostgreSqlDatasetTruncatorFactory());
-		TaskManagerFactory.register("write-pgsql-simple-dump-0.6", new PostgreSqlDatasetDumpWriterFactory());
-		TaskManagerFactory.register("read-pgsql-simple-0.6", new PostgreSqlDatasetReaderFactory());
-		TaskManagerFactory.register("write-pgsql-simple-change-0.6", new PostgreSqlChangeWriterFactory());
+		TaskManagerFactory.register("write-pgsql-0.6", new PostgreSqlDatasetWriterFactory());
+		TaskManagerFactory.register("truncate-pgsql-0.6", new PostgreSqlDatasetTruncatorFactory());
+		TaskManagerFactory.register("write-pgsql-dump-0.6", new PostgreSqlDatasetDumpWriterFactory());
+		TaskManagerFactory.register("read-pgsql-0.6", new PostgreSqlDatasetReaderFactory());
+		TaskManagerFactory.register("write-pgsql-change-0.6", new PostgreSqlChangeWriterFactory());
 		TaskManagerFactory.register("used-node-0.6", new UsedNodeFilterFactory());
 		TaskManagerFactory.register("way-key-value-0.6", new WayKeyValueFilterFactory());
 		TaskManagerFactory.register("read-change-interval-0.6", new ChangeDownloaderFactory());
